crates/plotnik-lib/tests/02-parser/recovery_validation/capture_dotted.txt
(identifier) @foo.bar
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:14
  |
1 | (identifier) @foo.bar
  |              ^^^^^^^^
  |
help: use `@foo_bar`
  |
1 - (identifier) @foo.bar
1 + (identifier) @foo_bar
  |
help: captures become fields in the output
